--- a/third_plugins.html
+++ b/third_plugins.html
@@ -115,7 +115,7 @@
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
-                        <img data-src="image/SlothCombo03.jpg" alt="" class="img-fluid mb-2 imagebigback lazyload">
+                        <img data-src="image/SlothCombo03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
                 </div>
                 <div class="commonFormat mt-5" id="XIVAuras">
