增加自動釣魚&可愛蠑螈

--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
-<div class="container-fluid py-3 mx-auto text-center bg-light footer">
+<footer class="container-fluid py-3 mx-auto text-center bg-light footer">
     <div class="row mx-auto justify-content-center align-items-center">
-    <h4 class="fw-bold">免責聲明</h4>
-    <p class="mb-2">您已知 XIVLauncher 並不符合 Square Enix 的服務條款。使用後果需自行負責。</p>
+        <h4 class="fw-bold">免責聲明</h4>
+        <p class="mb-2">您已知 XIVLauncher 並不符合 Square Enix 的服務條款。使用後果需自行負責。</p>
         <div class="col-sm-2 d-flex justify-content-sm-end">
             <img src="image/footer.png" class="img-fluid rounded-circle" alt="">
         </div>
@@ -12,4 +12,5 @@
             秘境MJ#2897，翻譯錯誤也歡迎回報，很多機翻怕會錯意！</p>
         </div>
     </div>
-</div>
+    <p class="fw-light mb-0 mt-1"><small>(C) 2010 - 2022 SQUARE ENIX CO., LTD. All Rights Reserved.</small></p>
+</footer>
