--- a/head.html
+++ b/head.html
@@ -1,6 +1,8 @@
 <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light tooTop">
     <div class="container-fluid">
-        <a class="navbar-brand mx-md-5" href="index.html">亞馬烏羅提後花園</a>
+        <a class="navbar-brand mx-md-5" href="index.html">
+            <img src="image/logo.png" alt="" class="me-2" style="width: 60px; height: auto;" >
+            亞馬烏羅提後花園</a>
         <button class="navbar-toggler hamburger1" type="button" id="hamburger"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,6 +31,7 @@
                         <li><a class="dropdown-item" href="third_plugins.html#XIVAuras">buff CD增強</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#Penumbra">Penumbra</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#Glamourer">Glamourer</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#autohook">自動釣魚</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
