--- a/third_plugins.html
+++ b/third_plugins.html
@@ -194,15 +194,20 @@
                         <li>在有直感buff下進行有條件收鉤</li>
                         <li>自動放線、自動以小釣大、自動GP藥...等更多</li>
                     </ul>
-                    <div class="mix d-flex">
+                    <div class="mix d-flex flex-wrap">
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
-                        <img data-src="https://user-images.githubusercontent.com/13919114/176052358-5ba44b80-6be3-4890-9826-1c4b4f7c60a9.png" alt="" class="img-fluid mb-2 imagebigback lazyload">
+                        <img data-src="image/Autohook01.jpg" alt="" class="img-fluid w-50 mb-2 imgnoJq lazyload">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/Autohook02.jpg" alt="" class="img-fluid w-50 mb-2 imgnoJq lazyload">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/Autohook03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
-                    <p>插件版CMTool，但不支援移動鏡頭＆調整動作。<br>
-                    移動鏡頭可以配合cammy使用<br>
-                    對物品（髮型）右鍵可以直接套在自己身上而不是試穿視窗，可保存套裝一鍵套用。</p>
                 </div>
             </div>
         </div>
