新增Material UI跟把Ping插件搬家

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
             <div class="col-lg-10 mx-auto px-4">
                 <!-- 功能介紹卡片 -->
                 <div class="row justify-content-md-center py-5 function indexFormat" id="card_menu">
+
+                    <!-- UI優化 -->
                     <div class="col-md-3 col-6 mb-3">
                         <div class="card shadow-sm h-100" data-aos="zoom-in">
                             <i class="bi bi-menu-button-wide-fill text-center mt-3 fs-1"></i>
@@ -120,10 +122,11 @@
                                 <li class="list-group-item"><a href="plugins_ui.html#Glamaholic">解放投影模板</a></li>
                                 <li class="list-group-item"><a href="plugins_ui.html#GoodMemory">物品解鎖備註★</a></li>
                                 <li class="list-group-item"><a href="plugins_ui.html#qolbar">解放快捷欄★★</a></li>
-                                <li class="list-group-item"><a href="plugins_ui.html#ping">顯示遊戲Ping</a></li>
+                                <li class="list-group-item"><a href="plugins_ui.html#DelvUI">魔獸風格UI</a></li>
                             </ul>
                         </div>
                     </div>
+                    <!-- 戰鬥輔助 -->
                     <div class="col-md-3 col-6 mb-3">
                         <div class="card shadow-sm h-100" data-aos="zoom-in">
                             <i class="bi bi-shield-shaded text-center mt-3 fs-1"></i>
@@ -140,6 +143,7 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- 改善遊戲體驗 -->
                     <div class="col-md-3 col-6 mb-3">
                         <div class="card shadow-sm h-100" data-aos="zoom-in">
                             <i class="bi bi-ui-checks text-center mt-3 fs-1"></i>
@@ -150,9 +154,11 @@
                                 <li class="list-group-item"><a href="plugins_tweak.html">實用設定合集★★★★</a></li>
                                 <li class="list-group-item"><a href="plugins_convenient.html#ChillFrames">限制遊戲FPS</a></li>
                                 <li class="list-group-item"><a href="plugins_convenient.html#GentleTouch">手把震動</a></li>
+                                <li class="list-group-item"><a href="plugins_convenient.html#ping">顯示遊戲Ping</a></li>
                             </ul>
                         </div>
                     </div>
+                    <!-- 地圖輔助 -->
                     <div class="col-md-3 col-6 mb-3">
                         <div class="card shadow-sm h-100" data-aos="zoom-in">
                             <i class="bi bi-pin-map-fill text-center mt-3 fs-1"></i>
@@ -167,6 +173,7 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- 成就懶人 -->
                     <div class="col-md-3 col-6 mb-3 mb-md-0">
                         <div class="card shadow-sm h-100" data-aos="zoom-in" data-aos-offset="10">
                             <i class="bi bi-trophy-fill text-center mt-3 fs-1"></i>
@@ -182,6 +189,7 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- 便利小功能 -->
                     <div class="col-md-3 col-6 mb-3 mb-md-0">
                         <div class="card shadow-sm h-100" data-aos="zoom-in" data-aos-offset="10">
                             <i class="bi bi-lightbulb text-center mt-3 fs-1"></i>
@@ -197,6 +205,7 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- 有點廢但很酷的小功能 -->
                     <div class="col-md-3 col-6 mb-3 mb-md-0">
                         <div class="card shadow-sm h-100" data-aos="zoom-in" data-aos-offset="10">
                             <i class="bi bi-hand-thumbs-up-fill text-center mt-3 fs-1"></i>
@@ -212,6 +221,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 基本安裝 -->
                 <div class="indexFixFormat" id="install">
                     <h3 class="smalltitle mb-4 indexFormat">基本安裝</h3>
                     <div class="accordion accordion-flush pb-5 indexFormat" id="accordionExample" data-aos="fade-up"
@@ -298,6 +309,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- 分享連結 -->
                 <h3 class="smalltitle mb-4">分享連結</h3>
                 <div class="row share-link mb-5 px-0" data-aos="fade-up">
 
