--- a/plugins_convenient.html
+++ b/plugins_convenient.html
@@ -54,9 +54,11 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
+
+                <!-- ChillFrames -->
                 <div class="commonFormat mt-5" id="ChillFrames ">
                     <div class="plugintitle d-flex align-items-center mb-3">
-                        <h6 class="fs-4 d-inline mb-0 me-3">ChillFrames </h6>
+                        <h6 class="fs-4 d-inline mb-0 me-3">ChillFrames</h6>
                         <a href="https://github.com/MidoriKami/ChillFrames" class="btn btn-outline-secondary"
                         target="_blank" role="button">插件原網址</a>
                     </div>
@@ -69,6 +71,7 @@
                     </div>
 
                 </div>
+                <!-- GentleTouch -->
                 <div class="commonFormat mt-5" id="GentleTouch">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">GentleTouch</h6>
@@ -77,6 +80,21 @@
                     </div>
                     <p>手把震動功能<br>
                     可以設定技能CD好、靠近以太風流時震動</p>
+                </div>
+                <!-- PingPlugin -->
+                <div class="commonFormat mt-5" id="ping">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">PingPlugin</h6>
+                        <a href="https://github.com/karashiiro/PingPlugin" class="btn btn-outline-secondary"
+                        target="_blank" role="button">插件原網址</a>
+                    </div>
+                    <p>顯示遊戲的Ping</p>
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://raw.githubusercontent.com/karashiiro/PingPlugin/master/Assets/1.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
             </div>
         </div>
