--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -55,6 +55,8 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
+
+                <!-- sonar -->
                 <div class="commonFormat mt-5" id="sonar">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Sonar</h6>
@@ -89,6 +91,7 @@
                         ▶視窗可點開詳細地圖座標<br>
                         ▶在當前伺服器的話直接點視窗內要打的怪即可傳送</P>
                 </div>
+                <!-- Triad Buddy -->
                 <div class="commonFormat mt-5" id="TriadBuddy">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Triad Buddy</h6>
@@ -120,6 +123,7 @@
                     </div>
                     <P>告訴你卡片要去哪裡拿，點選按鈕幫你插旗</P>
                 </div>
+                <!-- Tourist -->
                 <div class="commonFormat mt-5" id="Tourist">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Tourist</h6>
@@ -128,6 +132,7 @@
                     </div>
                     <p>探索筆記解答+插旗</p>
                 </div>
+                <!-- DailyDuty -->
                 <div class="commonFormat mt-5" id="DailyDuty">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">DailyDuty</h6>
@@ -178,13 +183,15 @@
                     </div>
                     <p>小窗設定</p>
                 </div>
+                <!-- GatherBuddy -->
                 <div class="commonFormat mt-5" id="Gather">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">GatherBuddy</h6>
                         <a href="https://github.com/Ottermandias/GatherBuddy" class="btn btn-outline-secondary"
                         target="_blank" role="button">插件原網址</a>
                     </div>
-                    <p>包含採集系三種職業限刻、隱藏、天氣條件、魚餌查詢功能，點擊名稱可以直接傳送最近傳點，外部網站上可以查到的資料這插件幾乎都有</p>
+                    <p>包含採集系三種職業限刻、隱藏、天氣條件、魚餌查詢功能，點擊名稱可以直接傳送最近傳點，漁師點魚餌可以自動裝備。外部網站上可以查到的資料這插件幾乎都有<br>
+                    Log排序可以優先顯示沒釣過的</p>
                     <div class="mix d-flex">
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
