--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -58,6 +58,8 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
+
+                <!-- Chat Bubbles -->
                 <div class="commonFormat mt-5" id="chatBubbles">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Chat Bubbles</h6>
@@ -72,6 +74,7 @@
                         <img data-src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
                 </div>
+                <!-- Visibility -->
                 <div class="commonFormat mt-5" id="Visibility">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Visibility</h6>
@@ -87,6 +90,7 @@
                         <img data-src="image/xl setting 03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
                 </div>
+                <!-- Glamaholic -->
                 <div class="commonFormat mt-5" id="Glamaholic">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Glamaholic</h6>
@@ -95,6 +99,7 @@
                     </div>
                     <p>解放投影模板數量限制</p>
                 </div>
+                <!-- GoodMemory -->
                 <div class="commonFormat mt-5" id="GoodMemory">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">GoodMemory</h6>
@@ -112,6 +117,7 @@
                         <img data-src="image/xl setting 04.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
                 </div>
+                <!-- QoL bar -->
                 <div class="commonFormat mt-5" id="qolbar">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">QoL bar</h6>
@@ -257,21 +263,26 @@
                           </tbody>
                     </table>
                 </div>
-                <div class="commonFormat mt-5" id="ping">
+                <!-- Delv UI -->
+                <div class="commonFormat mt-5" id="DelvUI">
                     <div class="plugintitle d-flex align-items-center mb-3">
-                        <h6 class="fs-4 d-inline mb-0 me-3">PingPlugin</h6>
-                        <a href="https://github.com/karashiiro/PingPlugin" class="btn btn-outline-secondary"
+                        <h6 class="fs-4 d-inline mb-0 me-3">Delv UI</h6>
+                        <a href="https://github.com/DelvUI/DelvUI" class="btn btn-outline-secondary me-2"
                         target="_blank" role="button">插件原網址</a>
+                        <a href="https://wago.io/delvui" class="btn btn-outline-secondary"
+                        target="_blank" role="button">DelvUI網站</a>
                     </div>
-                    <p>顯示遊戲的Ping</p>
+                    <p>魔獸風格的UI布局插件，有網站可以上傳/下載其他使用者的設定</p>
                     <div class="mix d-flex">
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
-                        <img data-src="https://raw.githubusercontent.com/karashiiro/PingPlugin/master/Assets/1.png" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                        <img data-src="image/DelvUI01.jpg" alt="" class="img-fluid mb-2 imagebig lazyload">
                     </div>
+                    <p>這邊有導入說明</p>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- footer -->
