--- a/third_plugins.html
+++ b/third_plugins.html
@@ -52,6 +52,8 @@
     <!-- 內容 -->
     <div class="container-fluid thirdplugin">
         <div class="row justify-content-end">
+
+            <!-- 選單 -->
             <nav class="col-md-4 col-lg-3 
             navbar navbar-light bg-light flex-column align-items-stretch justify-content-start
             ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu"
@@ -68,12 +70,16 @@
                     <nav class="nav nav-pills flex-column">
                         <a class="nav-link ms-3 my-1" href="#Penumbra">Penumbra</a>
                         <a class="nav-link ms-3 my-1" href="#Glamourer">Glamourer</a>
+                        <a class="nav-link ms-3 my-1" href="#Material">Material UI</a>
                     </nav>
                 <a class="nav-link" href="#autohook">自動釣魚</a>
                 </nav>
             </nav>
+
+
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-sm-5 px-4 px-sm-5 imagebig">
+                <!-- Cammy -->
                 <div class="commonFormat mt-5" id="cammy">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3" >Cammy</h6>
@@ -91,6 +97,7 @@
                         <img data-src="image/cammy.jpg" alt="" class="img-fluid mb-2 imagebigback lazyload">
                     </div>
                 </div>
+                <!-- XIVSlothCombo -->
                 <div class="commonFormat mt-5" id="SlothCombo">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">XIVSlothCombo</h6>
@@ -118,6 +125,7 @@
                         <img data-src="image/SlothCombo03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
                 </div>
+                <!-- XIVAuras -->
                 <div class="commonFormat mt-5" id="XIVAuras">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">XIVAuras</h6>
@@ -133,8 +141,9 @@
                         </div>
                         <img data-src="image/XIVAuras.gif" alt="" class="img-fluid mb-2 imagebigback lazyload">
                     </div>
-                    <p>buff增益增強、CD顯示增強</p>
+                    <p>buff增益增強、CD顯示增強，並且可以根據特定條件來決定是否顯示，支援分組＆導入導出</p>
                 </div>
+                <!-- Penumbra -->
                 <div class="commonFormat mt-5" id="Penumbra">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Penumbra</h6>
@@ -159,6 +168,7 @@
                     </div>
                     <p>配合Glamourer使用可以點右鍵直接遊戲內預覽mod後的樣子</p>
                 </div>
+                <!-- Glamourer -->
                 <div class="commonFormat mt-5" id="Glamourer">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Glamourer</h6>
@@ -178,6 +188,41 @@
                     移動鏡頭可以配合cammy使用<br>
                     對物品（髮型）右鍵可以直接套在自己身上而不是試穿視窗，可保存套裝一鍵套用。</p>
                 </div>
+                <!-- Material UI -->
+                <div class="commonFormat mt-5" id="Material">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Material UI</h6>
+                        <a href="https://github.com/Sevii77/ffxiv_materialui_accent" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <div class="alert alert-secondary" role="alert">
+                        https://raw.githubusercontent.com/Sevii77/ffxiv_materialui_accent/master/repo.json
+                    </div>
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/Sevii77/ffxiv_materialui_accent/raw/master/images/preview.png" alt="" class="img-fluid mb-2 imagebigback lazyload">
+                    </div>
+                    <p>有用過textool版本的人很熟悉了，設定都一樣，只是移植成了Penumbra版本，設定畫面都有預覽圖可以查看樣式<br>
+                    但涉及UI更改建議重新登入以確保所有UI變更成Material版本。
+                    </p>
+                    <p class="fs-5 fw-bold">需設置4K分辨率(不是螢幕分辨率)</p>
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/skotlex/ffxiv-material-ui/raw/master/ModPacks/Resources/Preview/guide1.png" alt="" class="img-fluid mb-2 imagebigback lazyload">
+                    </div>
+                    <p>顏色需為黑暗模式</p>
+                    <div class="mix d-flex">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="https://github.com/skotlex/ffxiv-material-ui/raw/master/ModPacks/Resources/Preview/guide2.png" alt="" class="img-fluid mb-2 imagebigback lazyload">
+                    </div>
+                </div>
+                <!-- AutoHook -->
                 <div class="commonFormat mt-5" id="autohook">
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">AutoHook</h6>
