--- a/plugins_menu.html
+++ b/plugins_menu.html
@@ -1,6 +1,8 @@
 <div class="col-md-4 col-lg-3 accordion accordion-flush
 ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
     id="accordionFlushExample">
+
+    <!-- UI優化相關 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -33,13 +35,14 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="plugins_ui.html#ping">
-                        PingPlugin
+                    <a class="nav-link active" aria-current="page" href="plugins_ui.html#DelvUI">
+                        Delv UI
                     </a>
                 </li>
             </ul>
         </div>
     </div>
+    <!-- 戰鬥相關 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingFive">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -73,6 +76,7 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
             </ul>
         </div>
     </div>
+    <!-- 改善遊戲體驗 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -98,10 +102,16 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
                         <a class="nav-link active" aria-current="page" href="plugins_convenient.html#GentleTouch">
                             GentleTouch</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="plugins_convenient.html#ping">
+                            PingPlugin
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
+    <!-- 座標地圖相關 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -137,6 +147,7 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
             </div>
         </div>
     </div>
+    <!-- 成就相關 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingFour">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -177,6 +188,7 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
             </div>
         </div>
     </div>
+    <!-- 便利小功能 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingSeven">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -227,6 +239,7 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
             </div>
         </div>
     </div>
+    <!-- 無用小功能 -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingSix">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -257,4 +270,5 @@ ps-md-5 | mt-5 | pt-5 | px-2 fixed-top secondmenu "
             </div>
         </div>
     </div>
+
 </div>
