--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <div w3-include-html="head.html"></div>
     <!-- 內容 -->
     <div class="container-fluid">
-        <div class="row">
-            <div class="px-4 pt-5 mt-5 text-center indexbanner">
+        <div class="row indexbanner">
+            <div class="col-lg-8 mx-auto px-4 pt-5 mt-5 text-center">
                 <!-- 支援下方形狀 -->
                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
                     <symbol id="info-fill" fill="currentColor" viewBox="0 0 16 16">
@@ -64,7 +64,7 @@
                             d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
                     </symbol>
                 </svg>
-                <div class="col-lg-8 mx-auto py-2">
+                <div class="py-2">
                     <!-- 最新狀態 -->
                     <!-- <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold"
                         role="alert">
@@ -98,12 +98,20 @@
                         國際服需至github下載，且插件功能不支援中文化後的國際服
                     </div>
                 </div>
-                <div class="container px-0" data-aos="fade-in">
-                    <img src="https://raw.githubusercontent.com/goatcorp/FFXIVQuickLauncher/master/misc/screenshot.png"
-                        class="img-fluid border rounded-3 shadow mb-5" alt="登陸器介面" width="700" height="500"
-                        loading="lazy">
+                <img src="https://raw.githubusercontent.com/goatcorp/FFXIVQuickLauncher/master/misc/screenshot.png"
+                    class="img-fluid border rounded-3 shadow mb-4" alt="登陸器介面" width="700" height="500"
+                    loading="lazy" data-aos="fade-in">
+                <div class="border mb-5 text-start p-4 update">
+                    <p class="fw-bold mb-2">網站更新日誌</p>
+                    <ul class="mb-0">
+                        <li>2022.09.18  更新XIVSlothCombo各職業翻譯按鈕</li>
+                        <li>2022.09.12  新增第三方插件頁面</li>
+                        <li>2022.09.01  更新Simple Tweaks翻譯至6.2版本</li>
+                    </ul>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <!-- 固定寬度col-lg-10 -->
             <div class="col-lg-10 mx-auto px-4">
                 <!-- 功能介紹卡片 -->
